O esqueleto do site junto do CSS utilizando SASS está feito, pendente somente os consumos de API e finalização do dinamismo da página

--- a/desafio/src/styles/variables.sass
+++ b/desafio/src/styles/variables.sass
@@ -2,7 +2,8 @@ $font-stack: 'Poppins'
 
 $text-color: #fff
 
-$secondary-text-color: #a8f000
+$secondary-text-color: #000
+
 
 $body-bg-color: #000
 
