--- a/desafio/src/styles/components/AboutUs.sass
+++ b/desafio/src/styles/components/AboutUs.sass
@@ -1,4 +1,3 @@
-
 @use "../variables"
 
 *
@@ -6,21 +5,44 @@
     padding: 0
     box-sizing: border-box
 
-body
-    background-color: variables.$body-bg-color
-    color: variables.$text-color
-
-nav
+.container-about
+    background-color: variables.$body-bg-color-secondary
     display: flex
-    justify-content: space-around
-    background-color: variables.$nav-bg-color
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    height: 400px
+
+.container-about h2
+    color: variables.$secondary-text-color
+    margin-bottom: 40px
     font-family: variables.$font-stack
-    font-size: 13px
+    font-weight: 400
 
-ul
+h3, p
+    color: variables.$text-color
+    font-family: variables.$font-stack
+    font-weight: 400
+
+.info
+    background: variables.$about-bg-color
+    width: 70%
+    height: 110px
+    margin-bottom: 50px
+
+.topicos
     display: flex
-    flex: row
-    list-style-type: none
+    gap: 20px
+    cursor: pointer
 
-li
-    margin: 10px
+.topicos .active
+    background-color: variables.$nav-bg-color
+    width: 75px
+
+.info p
+    background-color: variables.$nav-bg-color
+    height: 100px
+    padding: 10px
+
+.services
+    margin-top: 30px
