Projeto quase finalizado, faltando funções de carousel e de toggle

--- a/desafio/src/styles/components/AboutUs.sass
+++ b/desafio/src/styles/components/AboutUs.sass
@@ -19,6 +19,7 @@
     font-family: variables.$font-stack
     font-weight: 400
 
+
 h3, p
     color: variables.$text-color
     font-family: variables.$font-stack
@@ -46,3 +47,6 @@ h3, p
 
 .services
     margin-top: 30px
+
+.unactive
+    display: none
