--- a/desafio/src/styles/components/Services.sass
+++ b/desafio/src/styles/components/Services.sass
@@ -4,9 +4,6 @@
     display: flex
     justify-content: space-between
     align-items: center
-    height: 80px
-    width: 100%
-    text-align: center
 
 .container-services p
     font-family: variables.$font-stack
@@ -14,4 +11,9 @@
     font-size: 14px
     width: 65%
 
-
+.footer
+    height: 150px
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
