Projeto quase finalizado, faltando somente o tab navigation e responsividade, não irei conseguir entregar essas features por falta de tempo hábil do prazo.

--- a/desafio/src/styles/components/Services.sass
+++ b/desafio/src/styles/components/Services.sass
@@ -1,19 +1,17 @@
 @use "../variables"
 
-.container-services
-    display: flex
-    justify-content: space-between
-    align-items: center
+div.slick-slider.container-services.slick-initialized
+    width: 1300px
 
-.container-services p
-    font-family: variables.$font-stack
-    font-weight: 300
-    font-size: 14px
-    width: 65%
+.h3-carousel
+    margin-left: 550px
 
-.footer
-    height: 150px
+.text
     display: flex
     flex-direction: column
-    align-items: center
     justify-content: center
+    align-items: center
+
+.text p
+    width: 50%
+    margin-left: 330px
