--- a/desafio/src/styles/components/AboutUs.sass
+++ b/desafio/src/styles/components/AboutUs.sass
@@ -19,7 +19,6 @@
     font-family: variables.$font-stack
     font-weight: 400
 
-
 h3, p
     color: variables.$text-color
     font-family: variables.$font-stack
@@ -31,15 +30,6 @@ h3, p
     height: 110px
     margin-bottom: 50px
 
-.topicos
-    display: flex
-    gap: 20px
-    cursor: pointer
-
-.topicos .active
-    background-color: variables.$nav-bg-color
-    width: 75px
-
 .info p
     background-color: variables.$nav-bg-color
     height: 100px
@@ -50,3 +40,41 @@ h3, p
 
 .unactive
     display: none
+
+li
+    cursor: pointer
+
+div .active
+    color: black
+    width: 70%
+    display: grid
+    place-items: center
+
+.container-tab
+    position: relative
+    background-color: variables.$about-bg-color
+    width: 70%
+    height: 350px
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    padding: 30px
+    font-family: variables.$font-stack
+
+button
+    border: none
+    padding: 10px
+    margin: 10px
+    font-family: variables.$font-stack
+    font-size: 15px
+    text-transform: capitalize
+    font-size: 20px
+    background-color: variables.$about-bg-color
+
+.active
+    background-color: variables.$nav-bg-color
+    padding: 20px
+
+ul li
+    color: variables.$text-color
